(Shiran & Yael) Fix alignment of Exercise Form/List screen
Implement shards-react and designing the Exercise form / list screen.

--- a/src/ChooseExrcise.css
+++ b/src/ChooseExrcise.css
@@ -4,8 +4,8 @@
   box-sizing: border-box;
 }
 body {
-  background-image: linear-gradient(120deg, #f6d365 0%, #fda085 100%);
-  color: white;
+  /* background-image: linear-gradient(120deg, #f6d365 0%, #fda085 100%); */
+  /* color: white; */
   font-family: "Poppins", sans-serif;
   min-height: 100vh;
 }
